--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,10 @@ mybatis:
     map-underscore-to-camel-case: true   #开启驼峰转换
   mapper-locations: classpath:mappers/*.xml
 
-logging:
-  level:
-    root: INFO
-    org.springframework.web: EDBUG
-  file: D:\\xdmd_hbkj\\hbkj.log
+#logging:
+#  level:
+#    root: INFO
+#    org.springframework.web: ERROR
+##    root: INFO
+##    org.springframework.web: EDBUG
+#  file: D:\\xdmd_hbkj\\hbkj.log
