--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,16 @@
             <artifactId>cxf-rt-transports-http</artifactId>
             <version>3.2.6</version>
         </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-eureka</artifactId>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-feign</artifactId>
+            </dependency>
     </dependencies>
 
     <build>
