2019-8-28 1.暂未写完招标备案的多附件上传， 2.招标备案的审核需要修改

--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--打包时跳过测试-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
