2019-8-28 1.添加了课题立项模块的多附件上传【还没测试】 2.添加了课题立项模块的招标审核【还没测试】

--- a/pom.xml
+++ b/pom.xml
@@ -79,10 +79,17 @@
         </dependency>
         <!-- #################################  Kong用到的依赖START############################ -->
         <!-- 分页插件 -->
+        <!--
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
-            <version>LATEST</version>
+            <version>RELEASE</version>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>RELEASE</version>
         </dependency>
         <!--jackson -->
         <dependency>
